# recruitment-agent

./: .dockerignore  .env.example  .env.test.example  .gitignore  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  eval_quality_issue.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260622_0001_initial_recruiting_platform.py  20260622_0002_widen_llm_recommendations.py  20260622_0003_add_user_auth_fields.py  20260622_0004_reliability_indexes_nonce.py  20260622_0005_chat_only_interview_mode.py  20260623_0006_llm_call_log_metadata.py  20260623_0007_pilot_feedback.py
backend/app/: __init__.py  main.py
docs/: AUDIT_REPORT.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_CLEANUP_REPORT.md  EVALUATION_QUALITY_PLAN.md  ISSUES_PHASE_0.md  LICENSE_DECISION.md  LM_STUDIO_SETTINGS.md  NEXT_STEPS.md  OPEN_SOURCE_READINESS.md  OPERATIONAL_CHECKLIST.md  PILOT_LIMITATIONS.md  PILOT_MANUAL_VERIFICATION.md  PILOT_RUNBOOK.md  PILOT_VERIFICATION_STATUS.md  README.md  architecture.md  backend.md  commercial.md  deployment.md  development-workflow.md  evaluation.md  frontend.md  getting-started.md  limitations.md  local-llm.md  pilot.md  roadmap.md  security.md
docs/archive/: README.md  eval-triage-report.md  issues-phase-1b.md  issues-phase-3b.md  issues-phase-3c-lite.md  mvp-flow-test-2026-06-23.md  open-source-readiness-2026-06-23.md
evals/: README.md
evals/reports/: .gitignore  20260623T100907Z_eval_report.json  20260623T100907Z_eval_report.md  20260623T104144Z_eval_report.json  20260623T104144Z_eval_report.md  20260623T111250Z_eval_report.json  20260623T111250Z_eval_report.md  README.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/docs/: DEPENDENCY_AUDIT.md  UI_QA_REPORT.md
frontend/tests/: api-client.test.ts  pilot-ui.test.ts
scripts/: _check_utils.py  check_backend_fast.py  check_backend_full.py  check_checkpoint.py  check_eval.py  check_eval_targeted.py  check_frontend_build.py  check_frontend_fast.py  check_full.py  verify_fresh_migration.sh  verify_pilot_readiness.sh
src/recruitment_agent/: __init__.py  main.py
tests/: conftest.py  test_imports.py  test_infrastructure.py
tests/agents/: test_graph.py
(+187 files in other folders)
