[project]
name = "recruitment-agent"
version = "0.1.0"
description = "Agentic recruitment backend built with FastAPI, Postgres, LangChain, and LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "aiosmtplib>=3.0.2",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "openai>=1.59.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "uvicorn[standard]>=0.32.0",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: tests that do not require external services",
    "db: tests that require PostgreSQL",
    "mailpit: tests that require Mailpit",
    "lmstudio: tests that require LM Studio local server",
    "e2e: end-to-end tests that require the local stack",
]

[tool.ruff]
line-length = 120
target-version = "py311"
